install-usb-gui (0.2.17) UNRELEASED; urgency=low

  * Non-maintainer upload.
  * Remove install_fromiso_in_USB from source package.
  * Depend on fll-iso2usb.
  * Give package a sane long description.

 -- Kel Modderman <kel@otaku42.de>  Mon, 12 May 2008 20:52:08 +1000

install-usb-gui (0.2.16) unstable; urgency=low

  * copy memtest86+.bin into the usb device, and make an entry in the grub

 -- Joaquim Boura <x-un-i@sidux.com>  Tue, 15 Apr 2008 22:45:03 +0200

install-usb-gui (0.2.15) unstable; urgency=low

  * fixed pt language file.

 -- Joaquim Boura <x-un-i@sidux.com>  Mon, 07 Apr 2008 22:45:48 +0200

install-usb-gui (0.2.14) unstable; urgency=low

  [ Kel Modderman ]
  * trap umount_partition partition function to ensure used mointpoints are
    cleaned up in event of failure.
  * If using script from environment other than stock live-cd, the iso media
    can be provided by cd media, if mount of cd fails, prompt for cd to be
    insterted.
  * If iso file chooser returned a value, use it if valid file or block
    device.
  * Return something from filechooser is running in toram mode, as well as
    installed mode.

  [ Horst Tritremmel ]
  * file_chooser default dir changed to /

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 04 Apr 2008 11:34:05 +0200

install-usb-gui (0.2.13) unstable; urgency=low

  * Have a go at adding cdrom* and dvd* as gtk file chooser filters
    for iso -> usb install option.

 -- Kel Modderman <kel@otaku42.de>  Tue, 01 Apr 2008 04:03:59 +1000

install-usb-gui (0.2.12) unstable; urgency=low

  * Shorten grub menu description.

 -- Kel Modderman <kel@otaku42.de>  Mon, 31 Mar 2008 16:53:29 +1000

install-usb-gui (0.2.11) unstable; urgency=low

  * Provide compatibility code for when udetrigger/settle is replaced with
    udevadm. Add refresh_block_devices() function to take care of refresh of
    device nodes.

 -- Kel Modderman <kel@otaku42.de>  Mon, 24 Mar 2008 16:44:51 +1000

install-usb-gui (0.2.10) unstable; urgency=low
