@@ -4,8 +4,10 @@ install-usb-gui (0.2.17) UNRELEASED; urgency=low
   * Remove install_fromiso_in_USB from source package.
   * Depend on fll-iso2usb.
   * Give package a sane long description.
+  * Adjust variable name in install-usb-gui.bash to reflect new name of
+    backend.
 
- -- Kel Modderman <kel@otaku42.de>  Mon, 12 May 2008 20:52:08 +1000
+ -- Kel Modderman <kel@otaku42.de>  Mon, 12 May 2008 20:58:38 +1000
 
 install-usb-gui (0.2.16) unstable; urgency=low
 
